<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Party</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_email" translatable="false">Email</string>
    <string name="action_password">Password</string>
    <string name="action_username">Username</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="all_user">All User</string>
    <string name="my_profile">My Profile</string>
    <string name="project_name">Project Name</string>
    <string name="choose_project_type">Choose Project Type:</string>
    <string name="add_new_project">Add New Project</string>
    <string name="project_state">Project State: </string>
    <string name="add_new">Add New</string>
    <string name="title_activity_tasks" translatable="false">TasksActivity</string>
    <string name="add_new_task">Add New Task</string>
    <string name="description">Description</string>
    <string name="invite">Invite</string>
    <string name="state">State</string>
    <string name="dd_mm_yy" translatable="false">dd/MM/yyyy</string>
    <string name="task_name">Task Name</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="level">Level</string>
    <string name="project_empty">Project empty</string>
    <string name="list_members">List Members</string>
    <string name="add_new_member">Add New Member</string>
    <string name="edit">Edit Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="update">Update</string>
    <string name="comment">Comment</string>
    <string name="set_point">Set Point</string>
    <string name="planning_poker" translatable="false">Planning Poker</string>
    <string name="this_is_description" translatable="false">This is Description</string>
    <string name="chose">Choose</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="test_username" translatable="false">Thanh Quy</string>
    <string name="user_name">User Name</string>
    <string name="test_email" translatable="false">quythanh24@gmail.com</string>
    <string name="test_name" translatable="false">Thanh Quy</string>
    <string name="edit_profile">Edit\nProfile</string>
    <string name="you_not_voted_point">You have not voted point for this task</string>
    <string name="show_list_voted">Show List Voted</string>
    <string name="list_member_vote">List Member Vote</string>
    <string name="assign_this_task">Assign this task</string>
    <string name="task_type">Task Type</string>
    <string name="date_end">Date End</string>
    <string name="date_start">Date Start</string>
    <string name="done">Done</string>
    <string name="new_password">New Password</string>
    <string name="project_member">Project Member</string>
    <string name="delete">Delete</string>
    <string name="change_password">Change Password</string>
    <string name="profile_change_password">Change\nPassword</string>
    <string name="upload_avatar">Upload Avatar</string>
    <string name="save">Save</string>
    <string name="assignee">Assignee</string>
    <string name="deadline">Deadline: </string>
    <string name="edit_task">Edit Task</string>
    <string name="update_project_successful">Update Project Successful</string>
    <string name="update_project_false">Update Project false</string>
    <string name="create_project_successful">Create new project successful</string>
    <string name="are_you_sure_delete_this_project">Are you sure you want to delete this project</string>
    <string name="delete_task">Delete Task</string>
    <string name="are_you_sure_delete_this_task">Are you sure you want to delete this Task</string>
    <string name="email_is_not_empty">Email is not empty</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_is_required">Password is required</string>
    <string name="action_phone_number">Phone Number</string>
    <string name="create_account">Create account</string>
    <string name="this_field_required">This field required</string>
    <string name="this_field_cannot_contain_space">This field cannot contain spcae</string>
    <string name="password_too_short">Password too short</string>
    <string name="phone_not_valid">Phone number not valid</string>
    <string name="not_matched_with_password">Not matched with password</string>
    <string name="icon_search_title">Search</string>
    <string name="icon_filter_title">Filter</string>
    <string name="bottom_nav_favorites">Favorite</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_cart">Cart</string>
    <string name="uit_party">UIT Party</string>
    <string name="action_current_password">Current Password</string>
    <string name="action_new_password">New Password</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_next">Next</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ducluanxutrieu</string>
    <string name="nav_header_subtitle">Trần Đức Luân</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="user_profile">Profile</string>
    <string name="version">Version</string>
    <string name="cannot_logout">Cannot logout - Please check your internet</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="sex">Sex </string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="example_name">Nguyen Van A</string>
    <string name="example_phone_number">01234589</string>
    <string name="example_birthday">10/10/2010</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="toolbar_edit_profile">Edit Profile</string>
    <string name="update_profile_success">Update profile successful</string>
    <string name="your_ordered">My Ordered</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="address">Address</string>
    <string name="version_1_0_alpha">Version 1.0 Alpha</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="dish_title">Dish Title</string>
    <string name="dish_description">Dish Description</string>
    <string name="add_more_image">Add more image for this dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="price">Price: </string>
    <string name="_0">0</string>
    <string name="vnd">VND</string>
    <string name="dish_avatar">Dish Avatar</string>
    <string name="type">Type</string>
    <string name="holiday_offers">Holiday Offers</string>
    <string name="first_dishes">First Dishes</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="seafood">Seafood</string>
    <string name="drinks">Drinks</string>
    <string name="your_cart">Your Cart</string>
    <string name="cart_detail">Cart Detail</string>
    <string name="_1">1</string>
    <string name="dish_name">Dish Name</string>
    <string name="total">Total Price: </string>
    <string name="order_now">Order Now</string>
    <string name="dishes_price">Price</string>
    <string name="dish_detail">Dish Detail</string>
    <string name="dish_model">DISH_MODEL</string>
    <string name="home">Home</string>
    <string name="toolbar_change_password">Change Password</string>
    <string name="list_dish_selected_key">LIST_DISH_SELECTED</string>
    <string name="title_activity_maps">Map</string>
    <string name="our_address">Our Address</string>
    <string name="default_address">Nhà AG4, KTX khu A mở rộng, ĐHQG TPHCM</string>
    <string name="our_address_">Our Address:</string>
    <string name="tran_duc_luan">Tran Duc Luan</string>
    <string name="mssv_luan">16520704</string>
    <string name="nguyen_tan_hao">Nguyen Tan Hao</string>
    <string name="nguyen_ngoc_quang_dong">Nguyen Ngoc Quang Dong</string>
    <string name="tran_duc_trung">Tran Duc Trung</string>
    <string name="_class">Class</string>
    <string name="class_id">MMTT2016</string>
    <string name="schoolmaster">Schoolmaster</string>
    <string name="mr_thai_huy_tan">Mr: Thai Huy Tan</string>
    <string name="subjects_id">Subjects ID</string>
    <string name="subjects">NT117.K11</string>
    <string name="description_content">Đây là một ứng dụng được nhóm xây dựng trong khuôn khổ môn học Báo cáo đồ án lập trình ứng dụng mạng với sự hướng dẩn của thầy Thái Huy Tân.   Đây là một ứng dụng đặt tiệc cho những buổi tiệc nhỏ, ít người nhăm mang lại cảm giác ấm cúng bên bàn tiệc và cũng để phục vụ tốt hơn cho thực khách</string>
    <string name="communicate">Communicate</string>
    <string name="login_error">Login Error</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_successful">Register success</string>
    <string name="birthday_greater_than_now_day">Birthday need greater than now day</string>
    <string name="reset_password">Reset Password</string>
    <string name="input_username_to_get_password">Input your username to get your password</string>
    <string name="ok">Ok</string>
    <string name="cancel" tools:ignore="PrivateResource">Cancel</string>
    <string name="code_from_your_email">Code From Your Email</string>
    <string name="number_of_table">Number of Tables</string>
    <string name="date_booking_must_greater_than_day_now">Date party must greater than day now</string>
    <string name="date_party">Date Party</string>
    <string name="reservation_completed_successfully">Reservation completed successfully</string>
    <string name="your_reservation_with_a_mechanic_was_successful_nwe_will_process_payment_after_the_work_is_completed">Your reservation with a mechanic was successful. We will process payment after the work is completed.</string>
    <string name="an_email_confirmation_will_be_sent_to_you_shortly_with_your_order_detail">An email confirmation will be sent to you shortly with your order detail.</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="reservation_success">Reservation Success</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="update_dish_false">Update dish false</string>
    <string name="update_dish">Update Dish</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="delete_dish_success">Delete Dish successful</string>
    <string name="alert_delete_dish">Are you sure you want to delete this dish? After deletion cannot be restored</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit">Submit</string>
</resources>