<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.uit.party.ui.main.book_party_success.BookPartySuccessViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorWhile">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_checked" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/reservation_completed_successfully"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:text="@string/your_reservation_with_a_mechanic_was_successful_nwe_will_process_payment_after_the_work_is_completed"
                android:textColor="#C5589C"
                android:textSize="@dimen/_19sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/an_email_confirmation_will_be_sent_to_you_shortly_with_your_order_detail"
                android:textColor="#C5589C"
                android:textSize="@dimen/_17sdp"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center_horizontal"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_go"
                style="@style/MaterialButton"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:onClick="@{(view) -> viewModel.onBackMenuClicked(view)}"
                android:stateListAnimator="@drawable/state_list_animator_button"
                android:text="@string/back_to_menu"
                app:cornerRadius="@dimen/corner_radius" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>